deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: configuration
  name: configuration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configuration
  template:
    metadata:
      labels:
        app: configuration
    spec:
      containers:
        - envFrom:
            - secretRef:
                name: configuration-secrets
          image: gcr.io/pgtm-jlong/configuration
          imagePullPolicy: Always
          name: configuration
          readinessProbe:
            initialDelaySeconds: 120
            periodSeconds: 60
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080
