deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: configuration
  name: configuration
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: configuration
  type: LoadBalancer
